--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -11,6 +11,9 @@
 		<link rel="stylesheet" href="../../css/home/index.css" />
 		<link rel="stylesheet" href="../../css/utils/slide_navigatian.css" />
 		<style type="text/css">
+			.mui-bar{
+				box-shadow: 0 0 1px #dbdbdb;
+			}
 			.mui-bar-tab .mui-tab-item.mui-active {
 				color: #00a5e01;
 			}
