课程刷新逻辑修改

--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -67,6 +67,8 @@
 		<script>
 			mui.init();
 			var curPageFlag = 1; //0为关注页面 1为全部页面；
+			var changeAll = 0; //0为不更新全部 1为更新全部
+			var infoChangedFlag = 0;
 			document.getElementById("course-all").info = {
 				type: 1, //类型 1为全部 0为关注
 				pageIndex: 1, //页码
@@ -85,31 +87,26 @@
 				addSlider();
 				window.addEventListener("infoChanged", function() {
 					console.log("*******微课界面出现两遍******")
-					//					if(document.getElementById("course-attended")){
-					//						document.getElementById("course-attended").querySelector(".mui-table-view").innerHTML="";
-					//					}
-					toggleAttendedPart(0);
-					document.getElementById("course-all").querySelector(".mui-table-view").innerHTML = "";
-					document.getElementById("course-all").info.pageIndex = 1;
-					course_listnew.getData(1, document.getElementById("course-all").info, document.getElementById("course-all").querySelector(".mui-table-view"), course_listnew.setData);
+					changeAll = 1;
 					getAttendedClasses(toggleAttendedPart);
-				})
+					
+				});
 
 				window.addEventListener("focus", function() {
+					changeAll = 1;
 					getAttendedClasses(toggleAttendedPart);
-					freshView("course-all",1);
-					freshView("course-attended",0);
-				})
+				});
 			});
-			function freshSingleView(){
-				if(curPageFlag){
-					freshView("course-attended",0);
-				}else{
-					freshView("course-all",1);
+
+			function freshSingleView() {
+				if(curPageFlag) {
+					freshView("course-attended", 0);
+				} else {
+					freshView("course-all", 1);
 				}
 			}
 
-			function freshView(id,flag) {
+			function freshView(id, flag) {
 				if(document.getElementById(id)) {
 					var container = document.getElementById(id);
 					container.querySelector(".mui-table-view").innerHTML = "";
@@ -145,21 +142,21 @@
 					case 0: //全部
 						title.innerText = "全部";
 						indicator.style.display = "none";
-						curPageFlag=1;
+						curPageFlag = 1;
 						break;
 					case 10: //全部
 						title.innerText = "全部";
 						indicator.style.display = "block";
 						indicator.firstElementChild.className = "mui-indicator";
 						indicator.lastElementChild.className = "mui-indicator mui-active";
-						curPageFlag=1;
+						curPageFlag = 1;
 						break;
 					case 11: //关注
 						title.innerText = "关注";
 						indicator.style.display = "block";
 						indicator.firstElementChild.className = "mui-indicator mui-active";
 						indicator.lastElementChild.className = "mui-indicator";
-						curPageFlag=0;
+						curPageFlag = 0;
 						break;
 					default:
 						break;
@@ -257,21 +254,32 @@
 						course_listnew.getData(0, document.getElementById("course-attended").info, document.getElementById("course-attended").querySelector(".mui-table-view"), course_listnew.setData)
 						initFresh(document.getElementById("course-attended"));
 						setTitle(11);
-					}else{
-						freshSingleView();
+					} else {
+						if(changeAll) {
+							changeAll = 0;
+							freshView("course-attended", 0);
+							freshView("course-all", 1);
+						} else {
+							freshSingleView();
+						}
 					}
 				} else {
-					if(curPageFlag==0){
-						freshSingleView();
+					if(changeAll) {
+						changeAll = 0;
+						freshView("course-all", 1);
+					} else {
+						if(curPageFlag == 0) {
+							freshSingleView();
+						}
 					}
 					if(document.getElementById("course-attended")) {
 						//删除关注模块
-						sliderGroup.removeChild(document.getElementById("course-attended"));		
+						sliderGroup.removeChild(document.getElementById("course-attended"));
 					}
 					var slider = mui('#slider').slider();
 					slider.gotoItem(0);
 					setTitle(0);
-					
+
 				}
 			}
 			/**
