--- a/JiaoBaoYun-hb/html/micro-course/course-home1.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home1.html
@@ -89,7 +89,7 @@
 					console.log("*******微课界面出现两遍******")
 					changeAll = 1;
 					getAttendedClasses(toggleAttendedPart);
-					
+
 				});
 
 				window.addEventListener("focus", function() {
@@ -254,6 +254,10 @@
 						course_listnew.getData(0, document.getElementById("course-attended").info, document.getElementById("course-attended").querySelector(".mui-table-view"), course_listnew.setData)
 						initFresh(document.getElementById("course-attended"));
 						setTitle(11);
+						if(changeAll) {
+							changeAll = 0;
+							freshView("course-all", 1);
+						}
 					} else {
 						if(changeAll) {
 							changeAll = 0;
