--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -172,16 +172,6 @@
 					<div id="record" style="background: white;margin-top: 10px;padding-top: 10px;line-height: 0px;">
 						<textarea id="textarea_record" rows="4" placeholder="记事,最多500字" maxlength="500" disabled></textarea>
 						<div id="MultiMedia">
-							<!--<div id="_MSL_MultiMedia" style="width: 100%;">
-								<div id="MultiMedia_Body" class="multimedia-body">
-									<div id="MultiMedia_Header" class="multimedia-header"><span id="MultiMedia_Picture_Header" class="mui-icon iconfont icon-xiangji2"></span><span id="MultiMedia_Tuku_Header" class="mui-icon iconfont icon-tuku"></span><span id="MultiMedia_Audio_Header" class="mui-icon iconfont icon-yuyin3"></span><span id="MultiMedia_Video_Header" class="mui-icon iconfont icon-shipin2"></span></div>
-									<div id="MultiMedia_Footer" class="multimedia-footer">
-										<div id="MultiMedia_Picture_Footer"></div>
-										<div id="MultiMedia_Audio_Footer"></div>
-										<div id="MultiMedia_Video_Footer"></div>
-									</div>
-								</div>
-							</div>-->
 						</div>
 					</div>
 					<div id="top" style="margin-top: 10px;">
@@ -353,27 +343,21 @@
 
 				//点到类型切换监听
 				mui('#calltype').on('change', 'input', function() {
-					var value = this.getAttribute('value');
-					if(call_type == '') {
+					var ids = ["cb_2", "cb_3", "cb_4", "cb_5"];
+					for(var i in ids) {
+						var ele = document.getElementById(ids[i]);
+						ele.checked = false;
+					}
+					document.getElementById("input_call").style.color = 'gainsboro';
+					var value = this.getAttribute('value'); //本次选择的类型
+					var checkBox = document.getElementById("cb_" + value);
+					if(call_type == value) { //两次点击都是同一个checkbox
+						call_type = '';
+					} else {
+						checkBox.checked = true;
 						call_type = value;
 						document.getElementById("input_call").style.color = 'black';
-					} else {
-						//console.log('checkBoxBefore:' + call_type); //上次选择的类型
-						console.log('checkBox:' + value); //本次选择的类型
-						var checkBox = document.getElementById("cb_" + value);
-						var checkBoxBefore = document.getElementById("cb_" + call_type);
-						if(call_type == value) { //两次点击都是同一个checkbox
-							//checkBox.checked = true;
-							call_type = '';
-							document.getElementById("input_call").style.color = 'gainsboro';
-						} else {
-							checkBoxBefore.checked = false;
-							checkBox.checked = true;
-							call_type = value;
-							document.getElementById("input_call").style.color = 'black';
-						}
 					}
-					//console.log('call_type:' + call_type);
 					changeCommit();
 				});
 
