更新MUI及微课图标

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -46,7 +46,7 @@
 				<span class="mui-tab-label">展现</span>
 			</a>
 			<a class="mui-tab-item" href="../micro-course/course-home1.html">
-				<span class="mui-icon iconfont icon-wenda2"></span>
+				<span class="mui-icon iconfont icon-class"></span>
 				<span class="mui-tab-label">微课</span>
 			</a>
 		</nav>
