--- a/JiaoBaoYun-hb/html/micro-course/course-introduction.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-introduction.html
@@ -15,15 +15,15 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 id="title" class="mui-title">物理</h1>
+			<h1 id="title" class="mui-title"></h1>
 		</header>
 		<div id="divContent" class="mui-content mui-hidden">
 			<div style="font-size: 16px;padding-left: 10px;padding-top: 15px;;font-weight: 700;">授课老师</div>
-			<img id="teaHeadImg" style="position: absolute;z-index: 2;background-color: #efeff4;top: 85px;left: 20px;width: 40px;height: 40px;" src="../../image/utils/default_personalimage.png" onerror="onImageError(this);" />
+			<img id="teaHeadImg" style="position: absolute;z-index: 2;background-color: #efeff4;top: 85px;left: 20px;width: 40px;height: 40px;border-radius: 50%;" src="../../image/utils/default_personalimage.png" onerror="onImageError(this);" />
 			<div style="position: absolute;z-index: 1;border-color: #1db8f1;height: auto;border-width:1px ;border-style:dashed;right: 20px;left: 40px;top: 105px;">
 
 				<div style="padding:12px 10px;">
-					<p id="teaName" style="text-align: center;color: #323232;font-size: 15px;font-weight: 700;"></p><span id="teaInfo" style="text-align: center;color: #323232;font-size: 15px;">
+					<p id="teaName" style="text-align: center;color: #323232;font-size: 16px;font-weight: 700;"></p><span id="teaInfo" style="text-align: center;color: #323232;font-size: 15px;">
 
 					</span>
 				</div>
